Bug 426619 - Filename shortcuts overrule "replace all" shortcut
Summary: Filename shortcuts overrule "replace all" shortcut
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords: regression, usability
Depends on:
Blocks:
 
Reported: 2020-09-16 19:51 UTC by Gernot Gebhard
Modified: 2021-01-20 16:45 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gernot Gebhard 2020-09-16 19:51:00 UTC
STEPS TO REPRODUCE

1. Open two files, one called "a.txt", the other called "b.txt"
2. Switch to "b.txt" and enter some random text
3. Hit CTRL+R to open the search & replace dialog
4. Enter a valid search string that is found in the text you entered in 2. 
5. Enter some random replace string
6. Hit ALT+A (standard shortcut for replace all)


OBSERVED RESULT

Kate shows the contents of the file called "a.txt".


EXPECTED RESULT

All occurrences of the search string are being replaced.


SOFTWARE/OS VERSIONS

Linux/KDE Plasma: Manjaro
(available in About System)
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0 (built against 5.15.0)
Comment 1 Justin Zobel 2020-10-27 07:05:14 UTC
Confirmed on kate from git master.

The filenames of documents are being given shortcuts when the Alt key is held down.
Comment 2 Nate Graham 2020-10-27 10:45:15 UTC
Recent regression from porting to QTabbar. The tab names should not have automatically generated alt-acceperator shortcuts.
Comment 3 Christoph Cullmann 2021-01-19 19:40:10 UTC
Gernot, can you test that patch?

https://invent.kde.org/utilities/kate/-/merge_requests/189

Somehow for me this is still strange, thought the shortcut of the tab is now dead.
But perhaps I misuse it :P
Comment 4 Gernot Gebhard 2021-01-20 08:23:06 UTC
(In reply to Christoph Cullmann from comment #3)
> Gernot, can you test that patch?
> 
> https://invent.kde.org/utilities/kate/-/merge_requests/189
> 
> Somehow for me this is still strange, thought the shortcut of the tab is now
> dead.
> But perhaps I misuse it :P

The branch work/no_shortcut_clash_tabbar no longer features that annoying behavior. So yes, seems to be fixed by the changes made there.
Comment 5 Christoph Cullmann 2021-01-20 12:04:48 UTC
Git commit 06b74c3b22dfb8fc9d11054cfe22ea57dc3c20af by Christoph Cullmann.
Committed on 20/01/2021 at 12:04.
Pushed by cullmann into branch 'master'.

avoid auto-accelerators for the tab bar that lead to random changing auto-accelerators for important actions

M  +4    -0    kate/katetabbar.cpp

https://invent.kde.org/utilities/kate/commit/06b74c3b22dfb8fc9d11054cfe22ea57dc3c20af