avoid auto-accelerators for the tab bar that lead to random changing auto-accelerators for important actions

BUG: 426619